--- a/frontEnd/src/style.css
+++ b/frontEnd/src/style.css
@@ -35,7 +35,7 @@ header {
 .mainCard {
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: #272343;
     width: 75%;
     margin-top: 70px;
     border-radius: 20px;
@@ -43,6 +43,8 @@ header {
     box-shadow: 13px 12px 18px 2px rgba(0,0,0,0.4);
     min-width: 300px;
     max-width: 800px;
+    height: 600px;
+    overflow: auto;
 }
 
 .cardContent {
@@ -56,7 +58,7 @@ header {
 
     padding: 20px;
     border-radius: 10px;
-    background-color: blue;
+    background-color: #ded8d8;
 }
 
 .newListForm >input {
@@ -77,7 +79,7 @@ header {
     margin: 15px 0;
     padding: 20px;
     border-radius: 10px;
-    background-color: green;
+    background-color: #bae8e8;
 }
 .listItemTop, .listItemBottom {
     display: flex;
@@ -88,9 +90,14 @@ header {
 a {
     text-decoration: none;
 }
-.listItemTop >a {
-    color: white;
-    width: 50%;
+.listItemTop >a, .listItemTop >span {
+    color: black;
+    width: 70%;
+
+}
+.listItemTop >a:hover, .listItemTop >span:hover {
+    color: #626074;
+    font-size: 20px;
 
 }
 .listItemTop >div {
@@ -99,6 +106,7 @@ a {
     justify-content: flex-end;
 
 }
+
 
 .btn {
     padding: 5px 10px;
@@ -112,25 +120,104 @@ a {
     border: none;
     padding: 0 10px;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    /* box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px; */
+    background-color: transparent;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
 
+.Form {
+    background-color: #e3f6f5;;
+   
 
+    
+    -webkit-box-shadow: 13px 12px 18px 2px rgba(0,0,0,0.4); 
+    box-shadow: 13px 12px 18px 2px rgba(0,0,0,0.4);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
+}
+.loginForm {
+    padding: 20px;
+    height: 40%;
+    width: 50%;
+}
+.signUpForm {
+    height: 90%;
+    padding: 40px;
+    width: 70%;
+}
+.Form >h3 {
+    text-align: center;
+}
+.loginContainer {
+    align-items: center;
 
+}
 
-
-
-
+.internalForm {
+    display: flex;
+    flex-direction: column;
+    /* margin-bottom: 20px; */
+}
+.internalForm >label {
+    margin-bottom: 10px;
+}
+.internalForm >input {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+}
+.loginBtn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.names {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.names >div {
+    width: 48%;
+}
+.titleH3 {
+    margin-bottom: 10px;
+    text-align: center;
+    color: white;
+}
 
 
 
 @media only screen and (max-width: 600px) {
-    .mainCard {
+    .mainCard, header {
+        width: 95%;
+    }
+    
+}
+
+@media only screen and (max-width: 992px) {
+    .mainCard, header{
         width: 95%;
     }
 }
-
-/* @media only screen and (max-width: 992px) {
-    .mainCard {
-        width: 60%;
-    }
-} */
 
